--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,8 @@
         <section class="section hero">
           <div class="container-lg">
             <div class="hero-body">
-              <div class="hero-content">
+              <div class="hero-content"
+                data-aos="fade-up">
                 <h2 class="h1 hero-title">
                   Контактный центр 24
                 </h2>
@@ -97,7 +98,8 @@
                 </div>
 
                 <div class="hero-users">
-                  <div class="hero-user">
+                  <div class="hero-user"
+                    data-aos="fade-up">
                     <div class="hero-user-body">
                       <div class="hero-user-picture">
                         <picture>
@@ -110,7 +112,9 @@
                     <div class="hero-user-status"></div>
                   </div>
 
-                  <div class="hero-user">
+                  <div class="hero-user"
+                    data-aos="fade-up"
+                    data-aos-delay="100">
                     <div class="hero-user-body">
                       <div class="hero-user-picture">
                         <picture>
@@ -124,7 +128,9 @@
                   </div>
                 </div>
 
-                <div class="hero-emoji">
+                <div class="hero-emoji"
+                  data-aos="fade-up"
+                  data-aos-delay="200">
                   <div class="hero-emoji-item">
                     <span class="hero-emoji-header">😍</span>
                     <span class="hero-emoji-body">98%</span>
@@ -136,10 +142,14 @@
                 </div>
 
                 <div class="hero-messages">
-                  <div class="hero-message">
+                  <div class="hero-message"
+                    data-aos="fade-up"
+                    data-aos-delay="300">
                     Принимаем звонки
                   </div>
-                  <div class="hero-message">
+                  <div class="hero-message"
+                    data-aos="fade-up"
+                    data-aos-delay="400">
                     Фиксируем обращения
                   </div>
                 </div>
@@ -156,13 +166,19 @@
               </h2>
 
               <div class="rules-body">
-                <div class="rule">
+                <div class="rule"
+                  data-aos="fade-up"
+                  data-aos-delay="100">
                   Круглосуточно принимаем входящие обращения от ваших жителей.
                 </div>
-                <div class="rule">
+                <div class="rule"
+                  data-aos="fade-up"
+                  data-aos-delay="200">
                   Передаем заявки в работу вашим исполнителям с учетом загруженности и графика.
                 </div>
-                <div class="rule">
+                <div class="rule"
+                  data-aos="fade-up"
+                  data-aos-delay="300">
                   Отслеживаем исполнение, собираем обратную связь, а вам направляем отчеты.
                 </div>
               </div>
