--- a/src/index.html
+++ b/src/index.html
@@ -105,19 +105,13 @@
               </h2>
 
               <div class="rules-body">
-                <div class="rule"
-                  data-aos="fade-up"
-                  data-aos-delay="100">
+                <div class="rule">
                   Круглосуточно принимаем  входящие обращения от ваших жителей.
                 </div>
-                <div class="rule"
-                  data-aos="fade-up"
-                  data-aos-delay="200">
+                <div class="rule">
                   Передаем заявки в работу вашим исполнителям с учетом загруженности и графика.
                 </div>
-                <div class="rule"
-                  data-aos="fade-up"
-                  data-aos-delay="300">
+                <div class="rule">
                   Отслеживаем исполнение, собираем обратную связь, а вам направляем отчеты.
                 </div>
               </div>
