--- a/app/index.html
+++ b/app/index.html
@@ -87,7 +87,13 @@
                 </p>
 
                 <button type="button" class="btn btn-lg btn-dark hero-button">
-                  Подключить
+                  Отправить заявку
+
+                  <span class="icon">
+                    <svg>
+                      <use xlink:href="img/icons/arrow-right.svg#svg-arrow-right"></use>
+                    </svg>
+                  </span>
                 </button>
               </div>
 
@@ -181,6 +187,446 @@
             </div>
           </div>
         </section>
+
+        <section class="section appeals">
+          <div class="container">
+            <div class="section-header">
+  <h2 class="section-title">
+    Берем на себя всю работу с обращениями
+  </h2>
+
+    <p class="section-subtitle">
+      Наши диспетчера фиксирую заявки от ваших жителей и передают их в работу.
+    </p>
+
+</div>
+
+            <div class="appeals-body">
+              <div class="appeals-card">
+  <h3 class="appeals-card-title">
+    Принимаем заявки по телефону
+  </h3>
+
+    <p class="appeals-card-text">
+      Быстро фиксируем обращения. Контроль на каждом этапе — от звонка до решения.
+    </p>
+
+    <picture>
+      <source srcset="./img/appeals/image-1.webp" type="image/webp">
+      <img loading="lazy" src="./img/appeals/image-1.png" class="appeals-card-image" alt="Картинка">
+    </picture>
+
+</div>
+<div class="appeals-card">
+  <h3 class="appeals-card-title">
+    Принимаем обращения через мобильные приложения
+  </h3>
+
+    <picture>
+      <source srcset="./img/appeals/image-2.webp" type="image/webp">
+      <img loading="lazy" src="./img/appeals/image-2.png" class="appeals-card-image" alt="Картинка">
+    </picture>
+
+</div>
+<div class="appeals-card">
+  <h3 class="appeals-card-title">
+    Чат-боты для жителей
+  </h3>
+
+    <p class="appeals-card-text">
+      Виртуальный помощник для решения вопросов в сферы ЖКХ.
+    </p>
+
+    <picture>
+      <source srcset="./img/appeals/image-3.webp" type="image/webp">
+      <img loading="lazy" src="./img/appeals/image-3.png" class="appeals-card-image" alt="Картинка">
+    </picture>
+
+</div>
+<div class="appeals-card">
+  <h3 class="appeals-card-title">
+    AI — ассистент
+  </h3>
+
+    <p class="appeals-card-text">
+      Современный AI — диспетчер на основе технологии GPT корректно примет заявку и передаст в исполнение.
+    </p>
+
+</div>
+<div class="appeals-card">
+  <h3 class="appeals-card-title">
+    Контроль ЕДС
+  </h3>
+
+    <p class="appeals-card-text">
+      Отслеживаем поступление заявок через сервис единых диспетчерских служб таких как eds.mosreg.ru и других.
+    </p>
+
+</div>
+
+            </div>
+          </div>
+        </section>
+
+        <section class="section savings">
+          <div class="container">
+            <div class="section-header">
+  <h2 class="section-title">
+    Поможем сэкономить время и деньги
+  </h2>
+
+</div>
+
+            <div class="savings-body">
+              <div class="savings-main">
+                <div class="savings-info">
+                  <h3 class="savings-info-title">
+                    Сэкономим вам до 2 000 000 Р в год
+                  </h3>
+                  <p class="savings-info-text">
+                    Передавая нам процесс приема и обработки заявок, вы не тратите время на поиск и обучение сотрудников и экономите значительные сретства на ФОТ.
+                  </p>
+
+                </div>
+
+                <button type="button" class="btn btn-lg btn-dark">
+                  Отправить заявку
+
+                  <span class="icon">
+                    <svg>
+                      <use xlink:href="img/icons/arrow-right.svg#svg-arrow-right"></use>
+                    </svg>
+                  </span>
+                </button>
+              </div>
+
+              <div class="savings-picture">
+                <picture>
+                  <source srcset="./img/savings/image-1.webp" type="image/webp">
+                  <img loading="lazy" src="./img/savings/image-1.png" class="savings-image" width="" height="" alt="">
+                </picture>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="section software">
+          <div class="container">
+            <div class="section-header">
+  <h2 class="section-title">
+    Предоставляем современное ПО
+  </h2>
+
+    <p class="section-subtitle">
+      Автоматизация рутины — вы работаете быстрее и эффективнее.
+    </p>
+
+</div>
+
+            <div class="software-body">
+              <div class="software-banner">
+                <div class="software-banner-main">
+                  <div class="software-banner-info">
+                    <p class="software-banner-suptitle">
+                      Основа автоматизации
+                    </p>
+                    <h3 class="software-banner-title">
+                      CRM-система
+                    </h3>
+
+                    <p class="software-banner-text">
+                      Позволяет отслеживать все процессы и своевременно реагировать на изменения.
+                    </p>
+                  </div>
+
+                  <button type="button" class="btn btn-lg btn-dark">
+                    Отправить заявку
+
+                    <span class="icon">
+                      <svg>
+                        <use xlink:href="img/icons/arrow-right.svg#svg-arrow-right"></use>
+                      </svg>
+                    </span>
+                  </button>
+                </div>
+
+                <div class="software-banner-picture">
+                  <picture>
+                    <source srcset="./img/software/image-1.webp" type="image/webp">
+                    <img loading="lazy" src="./img/software/image-1.png" class="software-banner-image" width="610" height="406" alt="Картинка">
+                  </picture>
+                </div>
+              </div>
+
+              <div class="software-card">
+  <h3 class="software-card-title">
+    Мобильное приложение для жителей
+  </h3>
+
+  <picture>
+    <source srcset="./img/software/image-2.webp" type="image/webp">
+    <img loading="lazy" src="./img/software/image-2.png" class="software-card-image" width="224" height="346" alt="Картинка">
+  </picture>
+</div>
+<div class="software-card">
+  <h3 class="software-card-title">
+    Мобильное приложение для исполнителей
+  </h3>
+
+  <picture>
+    <source srcset="./img/software/image-3.webp" type="image/webp">
+    <img loading="lazy" src="./img/software/image-3.png" class="software-card-image" width="224" height="346" alt="Картинка">
+  </picture>
+</div>
+
+            </div>
+          </div>
+        </section>
+
+        <section class="section tariffs">
+          <div class="container">
+            <div class="section-header">
+  <h2 class="section-title">
+    Выгодные тарифы
+  </h2>
+
+    <p class="section-subtitle">
+      Действует скидка: при покупке на 3 месяца — 10%, на 6 месяцев — 15%, на 12 месяцев — 20%
+    </p>
+
+</div>
+
+            <div class="tariffs-body">
+              <ul class="nav nav-tabs" role="tablist"
+                id="tab-tariffs">
+                <li class="nav-item" role="presentation">
+                  <button type="button" class="btn nav-link active" role="tab"
+                    id="tab-0"
+                    data-bs-toggle="tab"
+                    data-bs-target="#tab-pane-0"
+                    aria-controls="tab-pane-0"
+                    aria-selected="true">
+                    Тарифы для УК
+                  </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button type="button" class="btn nav-link" role="tab"
+                    id="tab-1"
+                    data-bs-toggle="tab"
+                    data-bs-target="#tab-pane-1"
+                    aria-controls="tab-pane-1"
+                    aria-selected="false">
+                    Тарифы для ТСЖ
+                  </button>
+                </li>
+              </ul>
+              <div class="tab-content" id="tab-tariffs-content">
+                <div class="tab-pane fade show active" role="tabpanel" tabindex="0"
+                  id="tab-pane-0"
+                  aria-labelledby="tab-0">
+                  <div class="tariffs-main">
+                    <div class="tariffs-card">
+  <div class="tariffs-card-tariff">
+    КРУГЛОСУТОЧНЫЙ
+  </div>
+
+    <ul class="list-reset tariffs-card-list">
+      <li>
+        от 20 000 месяц
+      </li>
+
+        <li>
+          от 25 500 месяц
+        </li>
+
+    </ul>
+
+  <p class="tariffs-card-text">
+    Круглосуточный прием всех заявок.
+  </p>
+
+    <div class="tariffs-card-details">
+      500 минут или 200 заявок
+    </div>
+
+</div>
+<div class="tariffs-card">
+  <div class="tariffs-card-tariff">
+    НОЧНОЙ
+  </div>
+
+    <ul class="list-reset tariffs-card-list">
+      <li>
+        от 20 000 месяц
+      </li>
+
+    </ul>
+
+  <p class="tariffs-card-text">
+    Круглосуточный прием всех заявок, 500 минут или 200 заявок. Полноценныий контакт-центр, без дополнительных затрат.
+  </p>
+
+</div>
+<div class="tariffs-card">
+  <div class="tariffs-card-tariff">
+    ИНДИВИДУАЛЬНЫЙ
+  </div>
+
+  <p class="tariffs-card-text">
+    Итоговая стоимость рассчитывается исходя из количества лицевых счетов или обслуживаемых объемах в квадратных метрах.
+  </p>
+
+</div>
+
+                  </div>
+                </div>
+                <div class="tab-pane fade" role="tabpanel" tabindex="0"
+                  id="tab-pane-1"
+                  aria-labelledby="tab-1">
+                  <div class="tariffs-main">
+                    <div class="tariffs-card">
+  <div class="tariffs-card-tariff">
+    КРУГЛОСУТОЧНЫЙ
+  </div>
+
+    <ul class="list-reset tariffs-card-list">
+      <li>
+        от 20 000 месяц
+      </li>
+
+        <li>
+          от 25 500 месяц
+        </li>
+
+    </ul>
+
+  <p class="tariffs-card-text">
+    Круглосуточный прием всех заявок.
+  </p>
+
+    <div class="tariffs-card-details">
+      500 минут или 200 заявок
+    </div>
+
+</div>
+<div class="tariffs-card">
+  <div class="tariffs-card-tariff">
+    НОЧНОЙ
+  </div>
+
+    <ul class="list-reset tariffs-card-list">
+      <li>
+        от 20 000 месяц
+      </li>
+
+    </ul>
+
+  <p class="tariffs-card-text">
+    Круглосуточный прием всех заявок, 500 минут или 200 заявок. Полноценныий контакт-центр, без дополнительных затрат.
+  </p>
+
+</div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="section about">
+          <div class="container">
+            <div class="section-header">
+  <h2 class="section-title">
+    Почему выбирают нас
+  </h2>
+
+    <p class="section-subtitle">
+      Мы IT-компания, которая работает в сфере ЖКХ больше 10 лет. За это время мы выстроили бесперебойную и отказоустойчивую систему, которая ежедневно помогает управляющим компаниям, ТСЖ и ресурсоснабжающим организациям эффективно решать задачи обслуживания жителей.
+    </p>
+
+</div>
+
+            <div class="about-body">
+              <div class="about-card">
+  <h3 class="about-card-title">
+    15 лет
+  </h3>
+  <p class="about-card-text">
+    На рынке
+  </p>
+</div>
+<div class="about-card">
+  <h3 class="about-card-title">
+    100+
+  </h3>
+  <p class="about-card-text">
+    Управляющих компаний
+  </p>
+</div>
+<div class="about-card">
+  <h3 class="about-card-title">
+    25
+  </h3>
+  <p class="about-card-text">
+    Регионов обслуживания
+  </p>
+</div>
+
+            </div>
+          </div>
+        </section>
+
+        <section class="section callback">
+          <div class="container">
+            <div class="callback-body">
+              <div class="section-header">
+  <h2 class="section-title">
+    Оставьте заявку
+  </h2>
+
+    <p class="section-subtitle">
+      Наш менеджер свяжется с вами, ответит на все вопросы и предоставит демо-доступ к системе.
+    </p>
+
+</div>
+
+              <form class="callback-form">
+                <div class="fieldset">
+  <div class="field-control">
+    <input type="text" class="field" name="name" placeholder="Имя" required>
+  </div>
+</div>
+<div class="fieldset">
+  <div class="field-control">
+    <input type="email" class="field" name="email" placeholder="Электронная почта" required>
+  </div>
+</div>
+<div class="fieldset">
+  <div class="field-control">
+    <input type="tel" class="field" name="tel" placeholder="Номер телефона" required>
+  </div>
+</div>
+<div class="fieldset">
+  <div class="field-control">
+    <input type="text" class="field" name="organization" placeholder="Название организации или ИНН" required>
+  </div>
+</div>
+
+                <button type="button" class="btn btn-lg btn-dark btn-submit">
+                  Отправить заявку
+                </button>
+
+                <label class="form-check">
+                  <input type="checkbox" class="form-check-input" name="policy" required>
+                  <span class="form-check-label">
+                    Соглашаюсь на <a href="#" class="btn btn-link btn-inherit">обработку персональных данных</a>
+                  </span>
+                </label>
+              </form>
+            </div>
+          </div>
+        </section>
       </div>
 
       <div role="menubar" class="offcanvas offcanvas-end" tabindex="-1"
@@ -207,7 +653,85 @@
     </main>
 
     <footer class="footer">
-  <div class="container"></div>
+  <div class="container">
+    <div class="footer-header">
+      <ul class="list-reset footer-nav">
+        <li>
+  <a href="#" class="btn footer-nav-btn">
+    О проекте
+  </a>
+</li>
+<li>
+  <a href="#" class="btn footer-nav-btn">
+    О проекте
+  </a>
+</li>
+<li>
+  <a href="#" class="btn footer-nav-btn">
+    О проекте
+  </a>
+</li>
+<li>
+  <a href="#" class="btn footer-nav-btn">
+    О проекте
+  </a>
+</li>
+
+      </ul>
+      <ul class="list-reset footer-nav">
+        <li>
+  <a href="#" class="btn footer-nav-btn">
+    О проекте
+  </a>
+</li>
+<li>
+  <a href="#" class="btn footer-nav-btn">
+    О проекте
+  </a>
+</li>
+<li>
+  <a href="#" class="btn footer-nav-btn">
+    О проекте
+  </a>
+</li>
+<li>
+  <a href="#" class="btn footer-nav-btn">
+    О проекте
+  </a>
+</li>
+
+      </ul>
+      <ul class="list-reset footer-nav">
+        <li>
+          <h3 class="footer-nav-title">
+            Заказать звонок
+          </h3>
+        </li>
+        <li>
+  <a href="#" class="btn footer-nav-btn">
+    8 (495) 234-45-67
+  </a>
+</li>
+<li>
+  <a href="#" class="btn footer-nav-btn">
+    Написать в чат Telegram
+  </a>
+</li>
+
+      </ul>
+    </div>
+
+    <div class="footer-footer">
+      <div class="footer-copy">
+        <div class="footer-copy-title">
+          © Контактный центр 24
+        </div>
+        <div class="footer-copy-text">
+          Мы используем cookies для сбора данных пользователей — эти данные помогают нам настраивать рекламу и анализировать трафик. Оставаясь на сайте, вы соглашаетесь на обработку таких данных. Чтобы отказаться от обработки, отключите сохранение cookies в настройках вашего браузера.
+        </div>
+      </div>
+    </div>
+  </div>
 </footer>
 
   </div>
