--- a/src/index.html
+++ b/src/index.html
@@ -14,24 +14,30 @@
         <section class="section hero">
           <div class="container-lg">
             <div class="hero-body">
-              <div class="hero-content"
-                data-aos="fade-up">
-                <h2 class="h1 hero-title">
+              <div class="hero-content">
+                <h2 class="h1 hero-title"
+                  data-animation="bottom">
                   Контактный центр 24
                 </h2>
-                <p class="hero-description">
+                <p class="hero-description"
+                  data-animation="bottom"
+                  data-animation-delay="100">
                   Аварийно-диспетчерская служба для вашей управляющей компании
                 </p>
 
-                <button type="button" class="btn btn-lg btn-dark hero-button">
-                  Отправить заявку
+                <div
+                  data-animation="bottom"
+                  data-animation-delay="200">
+                  <button type="button" class="btn btn-lg btn-dark hero-button">
+                    Отправить заявку
 
-                  <span class="icon">
-                    <svg>
-                      <use xlink:href="img/icons/arrow-right.svg#svg-arrow-right"></use>
-                    </svg>
-                  </span>
-                </button>
+                    <span class="icon">
+                      <svg>
+                        <use xlink:href="img/icons/arrow-right.svg#svg-arrow-right"></use>
+                      </svg>
+                    </span>
+                  </button>
+                </div>
               </div>
 
               <div class="hero-relative">
@@ -44,7 +50,7 @@
 
                 <div class="hero-users">
                   <div class="hero-user"
-                    data-aos="fade-up">
+                    data-animation="bottom">
                     <div class="hero-user-body">
                       <div class="hero-user-picture">
                         <picture>
@@ -58,8 +64,8 @@
                   </div>
 
                   <div class="hero-user"
-                    data-aos="fade-up"
-                    data-aos-delay="100">
+                    data-animation="bottom"
+                    data-animation-delay="100">
                     <div class="hero-user-body">
                       <div class="hero-user-picture">
                         <picture>
@@ -74,8 +80,8 @@
                 </div>
 
                 <div class="hero-emoji"
-                  data-aos="fade-up"
-                  data-aos-delay="200">
+                  data-animation="bottom"
+                  data-animation-delay="200">
                   <div class="hero-emoji-item">
                     <span class="hero-emoji-header">😍</span>
                     <span class="hero-emoji-body">98%</span>
@@ -88,13 +94,13 @@
 
                 <div class="hero-messages">
                   <div class="hero-message"
-                    data-aos="fade-up"
-                    data-aos-delay="300">
+                    data-animation="bottom"
+                    data-animation-delay="300">
                     Принимаем звонки
                   </div>
                   <div class="hero-message"
-                    data-aos="fade-up"
-                    data-aos-delay="400">
+                    data-animation="bottom"
+                    data-animation-delay="400">
                     Фиксируем обращения
                   </div>
                 </div>
