--- a/src/index.html
+++ b/src/index.html
@@ -180,12 +180,12 @@
                 </button>
               </div>
 
-              <div class="savings-picture">
+              <!-- <div class="savings-picture">
                 <picture>
                   <source srcset="./img/savings/image-1.webp" type="image/webp">
                   <img loading="lazy" src="./img/savings/image-1.png" class="savings-image" width="" height="" alt="">
                 </picture>
-              </div>
+              </div> -->
             </div>
           </div>
         </section>
